--- a/content/posts/设置开机自启动.md
+++ b/content/posts/设置开机自启动.md
@@ -38,7 +38,7 @@ repost:
 ---
 
 <!--more-->
-{{< figure src="picture/5.jpg">}}
+{{< figure src="https://cdn.pixabay.com/photo/2024/05/09/08/07/ai-generated-8750161_1280.jpg">}}
 # 设置开机自启动
 
 ## 1. 创建一个启动脚本
