--- a/content/posts/终端美化.md
+++ b/content/posts/终端美化.md
@@ -52,10 +52,17 @@ chsh -s $(which zsh)
 ```
 不要关闭终端
 ### 1.2 安装oh-my-zsh
-
+1、curl/wget下载
 ```
-sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" 
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+```
+2、手动下载
+```
+git clone git@github.com:ohmyzsh/ohmyzsh.git
 
+ cd ohmyzsh/tools/
+
+ ./install.sh
 ```
 ### 1.3 修改主题
 
@@ -70,7 +77,7 @@ vim ~/.zshrc
 
 下载安装
 ```
-git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+git clone git@github.com:zsh-users/zsh-autosuggestions.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
 ```
 vim ~/.zshrc进去配置zsh-autosuggestions
 ```
@@ -78,6 +85,7 @@ plugins=(
    git
    # other plugins...
    zsh-autosuggestions
+   )
 ```
 
 ### 1.5 终端美化
@@ -96,8 +104,37 @@ plugins=(
 ```
 
 ## 2. oh my posh
+安装参考官方文档
+{{< link "https://ohmyposh.dev/docs/installation/linux">}}
 
+设置主题
+```
+vim ~/.zshrc
+```
+添加如下语句
+```
+export PATH="$HOME/.local/bin:$PATH"
+
+# 想使用windows系统上的主题可以加入
+eval "$(oh-my-posh --init --shell zsh --config  /mnt/c/Users/lwb/AppData/Local/Programs/oh-my-posh/themes/M365Princess.json)"
+
+# 想使用本系统上的主题可以加入
+eval "$(oh-my-posh --init --shell zsh --config  /home/lwb/.cache/oh-my-posh/themes/M365Princess.json)"
+```
 home目录下conda版本不生效：在主题文件中将python segment的"home_enabled"设置为true
+```
+{
+	"type": "python",
+	...
+	"properties": {
+		"home_enabled": true,
+    ...
+	},
+	...
+},
+
+```
+
 
 ## 3. git bash
 
